update some common algo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "resolveJsonModule": true,
     "noUnusedLocals": false,
     "skipDefaultLibCheck": true,
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
+    "strict": false
   },
   "exclude": ["node_modules"],
   "include": ["src/*.ts"]
